# django-client-framework

./: .gitignore  .prettierignore  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  installation.py  set_env.py
client-tests-server/: Makefile  manage.py
client-tests-server/subapp/: apps.py  models.py  tests.py
client-tests-server/testserverproj/: asgi.py  urls.py
clients-test-server/: Makefile  manage.py  requirements.txt
clients-test-server/migrations/: .gitignore
clients-test-server/subapp/: models.py  urls.py  views.py
clients-test-server/testserverproj/: __init__.py  models.py  settings.py  wsgi.py
dart-client-tests/: Dockerfile  Makefile  dart_server.dockerfile  docker-compose.yml
dcf_dummy_proj/dcf_dummy_proj/: settings.py
django_client_framework/: apps.py  settings.py
django_client_framework/api/: __init__.py  base_model_api.py  filter_backend.py  model_collection_api.py  model_object_api.py  rate_limit.py  related_model_api.py  urls.py
django_client_framework/client_schema/: __init__.py  convert.py  converters.py  fields.py
django_client_framework/exceptions/: handlers.py
django_client_framework/migrations/: 0001_initial.py  0002_auto_20220126_2350.py  0002_auto_20220127_0249.py
django_client_framework/models/: __init__.py  object_permissions.py  search_feature.py
django_client_framework/permissions/: __init__.py  default_users.py  groups.py  site_permission.py  users.py
django_client_framework/serializers/: __init__.py  delegate_serializer.py  model_serializer.py  serializer.py
doc-src/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.bash  nginx.conf  requirements.txt  sphinx.Makefile
doc-src/source/: conf.py  modify-this-document.rst
docs-src/: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  entrypoint.bash  nginx.conf  typedoc.json
docs/html/: genindex.html  index.html  modify-this-document.html  objects.inv  search.html  (+1 more)
installation-tests/: Makefile  docker-compose.yml  requirements.txt  ubuntu-base.dockerfile
stubs/: deprecation.pyi
unit-tests/: Dockerfile  Makefile  alpine.dockerfile  docker-compose.yml
(+313 files in other folders)
